<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aiservice.poseul.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.aiservice.poseul.ui.user.UserFragment"
        android:label="@string/nav_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_iot"
        android:name="com.aiservice.poseul.ui.iot.IotFragment"
        android:label="@string/nav_iot"
        tools:layout="@layout/fragment_iot" />

</navigation>
